--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ languaje: python
 python:
     - "3.8"
 script:
-    - coverage run test_producto.py
+    - coverage run test_jugador.py
+    - coverage run test_palabra.py
+    - coverage run test_ahorcado.py
 
 install:
     - pip install -r requirements.txt
