--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,7 @@ python:
     - "3.8"
 
 script:
-    - coverage run test_ahorcado.py 
-    - coverage run test_partida.py
+    - coverage run test_ejecutor.py 
 
 install:
     - pip install -r requirements.txt
