prueba con travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,9 @@ install:
     - pip install -r requirements.txt
 script:
     - coverage run test_partida.py 
-    - coverage run test_ahorcado.py 
 after_success:
     - coveralls
+script:
+    - coverage run test_ahorcado.py 
+after_success:
     - coveralls
