--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,6 @@ python:
 install:
     - pip install -r requirements.txt
 script:
-    - coverage run test_partida.py 
-after_success:
-    - coveralls
-script:
-    - coverage run test_ahorcado.py 
+    - coverage run test_ejecutor.py 
 after_success:
     - coveralls
