--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ python:
 install:
     - pip install -r requirements.txt
 script:
-    - coverage run test_ejecutor.py 
+    - coverage run test_ejecutador.py 
 after_success:
     - coveralls
